[gd_scene load_steps=4 format=3 uid="uid://clp4dlu6m17qq"]

[ext_resource type="Script" uid="uid://ca3ty6xbgp1kl" path="res://game.gd" id="1_ig7tw"]
[ext_resource type="Texture2D" uid="uid://twmtylatucvo" path="res://assets/1.jpg" id="2_0xm2m"]

[sub_resource type="Theme" id="Theme_0xm2m"]

[node name="GameUI" type="Control"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ig7tw")

[node name="RoundTimer" type="Timer" parent="."]

[node name="VBox" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(600, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreLabel" type="Label" parent="VBox"]
layout_mode = 2

[node name="QuestionLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="Option1" type="Button" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="Option2" type="Button" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="Option3" type="Button" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="Option4" type="Button" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="ResultLabel" type="Label" parent="VBox"]
layout_mode = 2

[node name="NextButton" type="Button" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Next"

[node name="TimerLabel" type="Label" parent="VBox"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="RetryButton" type="Button" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Retry"

[node name="WrongCounterLabel" type="Label" parent="VBox"]
layout_mode = 2

[node name="StartScreen" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -15.5
offset_right = 23.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="StartScreen"]
layout_mode = 2
theme = SubResource("Theme_0xm2m")
theme_override_colors/icon_pressed_color = Color(0.117647, 0.0313726, 0.027451, 0.713726)
theme_override_colors/icon_normal_color = Color(0.117011, 0.0317986, 0.0256435, 1)
theme_override_font_sizes/font_size = 150
text = "Start"

[node name="CategoryScreen" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = -85.5
offset_right = 42.5
offset_bottom = 85.5
grow_horizontal = 2
grow_vertical = 2

[node name="KitchenButton" type="Button" parent="CategoryScreen"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Kitchen"

[node name="GroceryButton" type="Button" parent="CategoryScreen"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Grocery"

[node name="TransportButton" type="Button" parent="CategoryScreen"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Transport"

[node name="SchoolButton" type="Button" parent="CategoryScreen"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "School"

[node name="FamilyButton" type="Button" parent="CategoryScreen"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Family"

[node name="ScoreBoardButton" type="Button" parent="CategoryScreen"]
layout_mode = 2
text = "Scoreboard"

[node name="BackgroundImage" type="TextureRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_0xm2m")

[node name="ScoreboardScreen" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="ScoreboardScreen"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "\"üèÜ Scoreboard\""

[node name="VBoxContainer" type="VBoxContainer" parent="ScoreboardScreen"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScoreList" type="Label" parent="ScoreboardScreen/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="ScoreboardScreen"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Back"

[connection signal="timeout" from="RoundTimer" to="." method="_on_RoundTimer_timeout"]
[connection signal="pressed" from="VBox/Option1" to="." method="_on_Option1_pressed"]
[connection signal="pressed" from="VBox/Option2" to="." method="_on_Option2_pressed"]
[connection signal="pressed" from="VBox/Option3" to="." method="_on_Option3_pressed"]
[connection signal="pressed" from="VBox/Option4" to="." method="_on_Option4_pressed"]
[connection signal="pressed" from="VBox/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="VBox/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="VBox/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="StartScreen/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CategoryScreen/KitchenButton" to="." method="_on_KitchenButton_pressed"]
[connection signal="pressed" from="CategoryScreen/GroceryButton" to="." method="_on_GroceryButton_pressed"]
[connection signal="pressed" from="CategoryScreen/TransportButton" to="." method="_on_TransportButton_pressed"]
[connection signal="pressed" from="CategoryScreen/SchoolButton" to="." method="_on_SchoolButton_pressed"]
[connection signal="pressed" from="CategoryScreen/FamilyButton" to="." method="_on_FamilyButton_pressed"]
[connection signal="pressed" from="CategoryScreen/ScoreBoardButton" to="." method="_on_ScoreboardButton_pressed"]
[connection signal="pressed" from="ScoreboardScreen/BackButton" to="." method="_on_backbutton_pressed"]
